# review-mcp

./: .gitignore  .goreleaser.yaml  Cargo.toml  README.md  build.rs  justfile
.github/workflows/: ci.yml
src/: audit.rs  db.rs  main.rs  mcp.rs  models.rs  prune.rs  server.rs  storage.rs  tools.rs
tests/: e2e_test.rs
