[package]
name = "review-mcp"
version = "0.1.0"
edition = "2021"
description = "Deterministic review workflow MCP server backed by SQLite"
license = "MIT"

[[bin]]
name = "review-mcp"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
